k8s/istio/gateways/istio-prometheus.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-prometheus
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 15030
      name: http-prometheus
      protocol: HTTP
    hosts:
    - gke.devopstar.com
---
